# vesper

./: .cfg  .gitignore  Cargo.toml  README.md  add_env.ps1  app.vue  compose.test.yml  compose.yml  config.toml  diesel.toml  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json  public.pem
assets/: jet_brains.css  style.css  variables.css
components/: CenteredPost.vue  Column.vue  NEWSidebar.vue  Post.vue  Sidebar.vue  SidebarItem.vue  SidebarSeparator.vue  VesperFullLogo.vue  VesperFullLogoAdapt.vue
components/background/shader/: Noise.vue
components/card/: Centered.vue  OLD.vue  Wide.vue
components/content/: BorderButton.vue  Button.vue  Container.vue  Header.vue  LabelSeparator.vue  MainSeparator.vue  TextInput.vue
components/sidebar/: Dynamic.vue  Item.vue
composables/: init.ts  useColorTheme.ts  useGlobalTheme.ts  usePageTheme.ts
frontend/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/assets/: style.css  themes.ts
frontend/components/: Capcha.vue  Centered.vue  Loading.vue  Turnstile.vue  VesperFullLogoAdapt.vue
frontend/components/card/: Container.vue  Wide.vue
frontend/components/content/: BorderButton.vue  Button.vue  Checkbox.vue  LabelSeparator.vue  LeftSeparator.vue  Link.vue  Message.vue  PasswordInput.vue  Placeholder.vue  Separator.vue  TextInput.vue
frontend/components/sidebar/: Dynamic.vue  Item.vue
frontend/composables/: useColorTheme.ts  usePageTheme.ts
frontend/layouts/: default.vue
frontend/pages/: TextInput.vue  [id].vue  login.vue  permission_editor.vue  register.vue  settings.vue  tos.vue
frontend/pages/call/: index.vue
frontend/pages/profile/: [profile_id].vue
frontend/public/: variables.css
frontend/public/shaders/: background.glsl
layouts/: default.vue
libs/appstate/: Cargo.toml
libs/appstate/src/: appstate.rs  env.rs  lib.rs  postgre.rs  redis_tokens.rs  vars.rs
libs/casbin_perm_lib/: Cargo.toml
libs/casbin_perm_lib/src/: lib.rs  middleware.rs
libs/entities/src/: prelude.rs  user_data.rs
libs/layers/: Cargo.toml
libs/layers/src/: auth.rs  lib.rs  logging.rs  mod.rs  permission.rs  rustperms.rs
libs/message_broker/: Cargo.toml
libs/message_broker/src/: lib.rs  publisher.rs
libs/permissions_lib/: Cargo.toml
libs/permissions_lib/src/: lib.rs  middleware.rs  redis.rs  structs.rs  tests.rs
libs/perms/: Cargo.toml
libs/perms/src/: lib.rs  proto.rs
libs/postgre/: Cargo.toml
libs/postgre/db/: Cargo.toml
libs/postgre/entities/: Cargo.toml
libs/postgre/migrations/: Cargo.toml
libs/redis-keys/: Cargo.toml
libs/redis-keys/src/: lib.rs  redis_tokens.rs
libs/redis_utils/: Cargo.toml
libs/redis_utils/src/: lib.rs  redis.rs  redis_cache.rs  redis_perms.rs  redis_tokens.rs  users.rs
libs/rustperms/: Cargo.toml  build.rs
libs/rustperms/proto/: rustperms.proto
libs/rustperms/src/: lib.rs
libs/rustperms/src/api/: actions.rs  mod.rs  util.rs
libs/rustperms/src/core/: actions.rs  groups.rs  manager.rs  mod.rs  permissions.rs  users.rs
libs/service/: Cargo.toml
libs/service/src/: lib.rs
libs/shared/: Cargo.toml
libs/shared/src/: env.rs  lib.rs  logger.rs
libs/shared/src/layers/: auth.rs  logging.rs  mod.rs  permission.rs
libs/shared/src/tokens/: jwt.rs  mod.rs  redis.rs
libs/shared/src/utils/: app_err.rs  cookies.rs  env.rs  hash.rs  header.rs  logger.rs  mod.rs  panic_hook.rs  route.rs  set_encoder.rs  token.rs  validation.rs  verify_turnstile.rs
libs/shared_cookies/: Cargo.toml
libs/shared_db/: Cargo.toml
libs/shared_tokens/: Cargo.toml
migrations/2025-01-25-160907_create_basic/: up.sql
migrations/2025-01-25-160907_user_data/: up.sql
nginx/: default.conf
pages/: [id].vue  index.vue  login.vue  register.vue  settings.vue
pages/call/: index.vue
plugins/: globalTheme.js  globalVariables.ts
public/: variables.css
public/shaders/: background.glsl
services/auth/: Cargo.toml
services/auth/src/: main.rs
services/auth/src/endpoints/: delete.rs  login.rs  logout.rs  logout_other.rs  mod.rs  oauth.rs  public_key.rs  recovery_password.rs  refresh.rs  register.rs  set_refresh_rules.rs  timestamp.rs  username.rs
services/auth/src/repository/: cookies.rs  db.rs  email.rs  mod.rs  refresh_processor.rs  tokens.rs
services/calls/: Cargo.toml
services/calls/src/: main.rs  nats.rs  rooms.rs  state.rs  types.rs
services/email/: Cargo.toml
services/email/src/: email_templates.rs  mailer.rs  main.rs  subscriber.rs
services/init/: Cargo.toml
services/init/src/: main.rs
services/load_balancer/: Cargo.toml
services/load_balancer/src/: main.rs
services/old-auth/src/: auth_service.rs  calls_service.rs  main.rs  test.rs
services/permission_nodes/: Cargo.toml
services/permission_nodes/src/: master.rs  replica.rs
services/permission_nodes/src/db/: mod.rs  models.rs
services/permission_nodes/src/db/schema/: group.sql  user.sql
services/perms/: Cargo.toml
services/perms/src/: main.rs
services/perms/src/endpoints/: groups.rs  mod.rs  perms.rs  test.rs
services/root_panel/: Cargo.toml
services/root_panel/src/: main.rs
services/rustperms_nodes/: Cargo.toml  Dockerfile.master  Dockerfile.replica
services/rustperms_nodes/proto/: rustperms.proto
services/rustperms_nodes/src/: lib.rs  master.rs  proto.rs  replica.rs  test.rs  tests.rs
services/rustperms_nodes/src/db/: mod.rs  models.rs
services/rustperms_nodes/src/db/schema/: drop.sql  group.sql  user.sql
services/rustperms_nodes/src/service/: master.rs  mod.rs  replica.rs
services/service_father/: Cargo.toml
services/service_father/src/: main.rs
services/user/: Cargo.toml
services/user/src/: main.rs  state.rs
src/: auth_service.rs  auth_service_legacy.rs  dsync.rs  main.rs  schema.rs  test.rs
src/auth/: login.rs  mod.rs  oauth.rs  refresh.rs  register.rs
src/auth/checks/: email.rs
src/auth/endpoints/: mod.rs  (+5 more)
src/auth_legacy/: login.rs  refresh.rs  register.rs  shared.rs
src/calls/: endpoints.rs  mod.rs  records.rs
src/shared/: checks.rs  env.rs  mod.rs  replace_err.rs  settings.rs
utils/: eventBus.js  updateTheme.js
(+62 files in other folders)
