[package]
name = "permissions_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
redis_utils.workspace = true
tower.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
once_cell = "1.21.0"
postgre_entities.workspace = true
regex.workspace = true
sea-orm.workspace = true
shared.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
tokio.workspace = true
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.100"
paste = "1.0.15"
bb8 = "0.9.0"
bb8-redis = "0.21.0"
postgre_migrations.workspace = true
