[package]
name = "rustperms"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.46"}
tracing = "0.1.41"

tonic = "0.13.1"
smallvec = "1.15.1"
[build-dependencies]
tonic-build = "0.13.1"
