[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
ctor = "0.4.0"
dotenvy = "0.15.7"
once_cell = "1.20.3"
serial_test = "3.2.0"
tempfile = "3.17.1"
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
include-bytes-plus.workspace = true
anyhow.workspace = true
uuid.workspace = true
serde.workspace = true
axum-extra.workspace = true
axum.workspace = true
chrono.workspace = true
tower.workspace = true
tower-http.workspace = true
cookie.workspace = true
r2d2.workspace = true
redis.workspace = true
serde_json.workspace = true
num-bigint = "0.4.6"
num-traits = "0.2.19"
sea-orm.workspace = true
postgre_entities.workspace = true
base64 = "0.22.1"
