[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[features]
default = []
disable_turnstile = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
postgre_migrations.workspace = true
postgre_entities.workspace = true
sea-orm.workspace = true
serde.workspace = true
shared.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lazy_static.workspace = true
bcrypt.workspace = true
regex.workspace = true
cookie.workspace = true
sha2 = "0.10.8"
log = "0.4.26"
