[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[features]
default = ["disable_turnstile"] # "disable_email"
disable_turnstile = []
disable_email = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
postgre_entities.workspace = true
sea-orm.workspace = true
serde.workspace = true
shared.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lazy_static.workspace = true
bcrypt.workspace = true
regex.workspace = true
cookie.workspace = true
sha2 = "0.10.8"
log = "0.4.26"
include-bytes-plus.workspace = true
email = { version = "0.1.0", path = "../email" }
db = { version = "0.1.0", path = "../../libs/postgre/db" }
async-nats.workspace = true
message_broker = { version = "0.1.0", path = "../../libs/message_broker" }
bincode = { version = "2.0.0", features = ["serde"] }
rand.workspace = true
