[package]
name = "email"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
bincode = { version = "2.0.0", features = ["serde"] }
bytes = "1.10.1"
futures = "0.3.31"
include-bytes-plus.workspace = true
lettre = "0.11.14"
once_cell = "1.20.3"
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
tokio.workspace = true
tracing.workspace = true
message_broker.workspace = true
layers = { version = "0.1.0", path = "../../libs/layers" }
bb8 = "0.9.0"
bb8-redis = "0.21.0"
