[package]
name = "init"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
sea-orm.workspace = true
shared.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lazy_static.workspace = true
redis_utils.workspace = true
db = { version = "0.1.0", path = "../../libs/postgre/db" }
postgre_migrations.workspace = true
perms = { version = "0.1.0", path = "../../libs/perms" }
rustperms_nodes = { version = "0.1.0", path = "../rustperms_nodes" }
