[package]
name = "load_balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait="0.1"
log = "0.4.27"
pingora = { version = "0.5", features = ["lb", "rustls"] }
rustls = { version = "0.23.29", features = ["ring"] }
env_logger = "0.11.8"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log = "0.2.0"
shared.workspace = true
