[package]
name = "perms"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
shared.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
postgre_entities.workspace = true
sea-orm.workspace = true
serde.workspace = true
tower-http.workspace = true
redis_utils.workspace = true
db = { version = "0.1.0", path = "../../libs/postgre/db" }
base64 = "0.22.1"
service = { version = "0.1.0", path = "../../libs/service" }
layers = { version = "0.1.0", path = "../../libs/layers" }
casbin_perm_lib = { version = "0.1.0", path = "../../libs/casbin_perm_lib" }