[package]
name = "rustperms_nodes"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
prost = "0.13.5"
async-nats = "0.42.0"
rustperms = { version = "0.1.0", path = "../../libs/rustperms" }
shared.workspace = true
prost-types = "0.14.1"
serde.workspace = true
bincode = "2.0.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
tower.workspace = true
# layers = { version = "0.1.0", path = "../../libs/layers" }
tower-http.workspace = true
futures = { version = "0.3.31", features = ["std"] }

[build-dependencies]
tonic-build = "0.13.1"

[[test]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "master"
path = "src/master.rs"

[[bin]]
name = "replica"
path = "src/replica.rs"


